fix: fixed an issue with height causing a restriction in items displayed on mobile layout

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -91,7 +91,6 @@ form {
 
 .app-container {
     display: flex;
-    height: 100%;
     gap: 2rem;
     padding: 2rem;
 }
@@ -112,5 +111,16 @@ form {
 
     .app-container {
         flex-direction: column;
+    }
+
+    .table-container {
+        max-height: 20rem;
+    }
+}
+
+@media (min-width: 450px) {
+
+    .app-container {
+        height: 100%;
     }
 }
